--- a/clocks.css
+++ b/clocks.css
@@ -1,20 +1,16 @@
-  #clocksTableId {
+.tableCenter {
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 30%;
+}
+ 
+ .clocksTable {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     /*width: auto;*/
   }
 
-    #clocksTableId td, #clocksTableId th {
-        border: 1px solid black;
-        text-align: center;
-        padding: 15px;
-    }
-  
-  /* #clocksTableId tr:nth-child(even){background-color: #f2f2f2;} */
-  
-  #clocksTableId tr:hover {background-color: rgb(168, 221, 252);}
-  
-  #clocksTableId th {
+  .clocksTable th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
@@ -22,8 +18,17 @@
     color: white;
   }
 
-.tableCenter {
-    width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
-}
+  .clocksTable tr:hover {background-color: rgb(168, 221, 252);}
+
+  .clocksTable td {
+    border: 1px solid black;
+    text-align: center;
+    padding: 15px;
+  }
+  
+  /* #clocksTableId tr:nth-child(even){background-color: #f2f2f2;} */
+  
+ 
+  
+
+
